k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: basic3tier
  name: basic3tier-ui
  namespace: basic3tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic3tier
  template:
    metadata:
      labels:
        app: basic3tier
    spec:
      containers:
      - image: 517344335201.dkr.ecr.ap-southeast-2.amazonaws.com/codingdojo_ecr:basic3tier-ui
        name: basic3tier-ui
        ports:
        - containerPort: 80
          name: basic3tier-ui
      imagePullSecrets:
       - name: regcred
