k8s/backend-clusterservice.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basic3tier
  name: basic3tier-api
  namespace: basic3tier
spec:
  type: ClusterIP
  ports:
  - name: "basic3tier-api"
    port: 80
    targetPort: 80
  selector:
    app: basic3tier
