k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basic3tier-api
  name: basic3tier-api
  namespace: basic3tier
spec:
  type: NodePort
  ports:
  - name: "backend-service"
    port: 5001
    targetPort: 80
    nodePort: 31001
  selector:
    app: basic3tier-api
