k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basic3tier
  name: basic3tier-ui
  namespace: basic3tier
spec:
  type: NodePort
  ports:
  - name: "frontend-service"
    port: 5000
    targetPort: 80
    nodePort: 31001
  selector:
    app: basic3tier
