k8s/postgres-clusterservice.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basic3tier
  name: basic3tier-db
  namespace: basic3tier
spec:
  type: ClusterIP
  ports:
  - name: "basic3tier-db"
    port: 5432
    targetPort: 5432
  selector:
    app: basic3tier
